txt-output/29.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: w should be even w, True should be of type Int        
v19 = \x -> let w = x +1                              
            in if w then [1,True] else [4]

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\29.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\29.hs:6:20:
    No instance for (Num Bool)
      arising from a use of `+' at ill-typed\29.hs:6:20-23
    Possible fix: add an instance declaration for (Num Bool)
    In the expression: x + 1
    In the definition of `w': w = x + 1
    In the expression: let w = x + 1 in if w then [1, True] else [4]


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\29.hs, ill-typed\29.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\29.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\29.hs:6:23: error:
    * No instance for (Num Bool) arising from a use of `+'
    * In the expression: x + 1
      In an equation for `w': w = x + 1
      In the expression: let w = x + 1 in if w then [1, True] else [4]
  |
6 | v19 = \x -> let w = x +1                              
  |                       ^

ill-typed\29.hs:7:27: error:
    * No instance for (Num Bool) arising from the literal `1'
    * In the expression: 1
      In the expression: [1, True]
      In the expression: if w then [1, True] else [4]
  |
7 |             in if w then [1,True] else [4]
  |                           ^
